opam-version: "2.0"
maintainer: "g2p.code@gmail.com"
authors: [ "Gabriel de Perthuis" ]
homepage: "https://github.com/mirage/wodan"
dev-repo: "git+https://github.com/mirage/wodan.git"
bug-reports: "https://github.com/mirage/wodan/issues"
name: "wodan-irmin"
synopsis: "Wodan as an Irmin store"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@fmt" "-p" name ] {with-test}
]

depends: [
  "ocamlfind" {build}
  "dune"  {>= "1.7"}

  "ocamlformat" {with-test}
  "alcotest" {with-test}
  "bos" {with-test}
  "cstruct" {with-test}
  "diet" {with-test}
  "ezjsonm" {with-test}
  "io-page" {with-test}
  "irmin-mem" {with-test}
  "irmin-test" {with-test}
  "logs" {with-test}
  "lwt" {with-test}
  "mirage-block-unix" {with-test}
  "ounit" {with-test}
  "ocaml-migrate-parsetree" {with-test}
  "ppx_sexp_conv" {with-test}
  "yaml" {with-test}

  "checkseum" {>= "0.0.2"}
  "digestif"
  "io-page-unix"
  "irmin"
  "irmin-chunk"
  "irmin-git"
  "lwt_ppx"
  "mirage-block-ramdisk"
  "mirage-block-unix"
  "nocrypto"
  "wodan"
]

tags: "org:mirage"
