opam-version: "2.0"
name: "wodan-irmin"
maintainer: "g2p.code@gmail.com"
authors: [ "Gabriel de Perthuis" ]
homepage: "https://github.com/mirage/wodan"
bug-reports: "https://github.com/mirage/wodan/issues"
dev-repo: "git+https://github.com/mirage/wodan.git"
license: "ISC"
version: "dev"
synopsis: "Wodan as an Irmin backend"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml" {>= "4.06.1"}
  "dune"  {>= "1.7"}
  "irmin-test" {>= "2.0.0" & < "3.0.0" & with-test}
  "checkseum" {>= "0.0.2"}
  "digestif"
  "io-page-unix"
  "irmin" {>= "2.0.0" & < "3.0.0"}
  "irmin-chunk" {>= "2.0.0" & < "3.0.0"}
  "irmin-git" {>= "2.0.0" & < "3.0.0"}
  "irmin-unix" {>= "2.0.0" & < "3.0.0"}
  "lwt_ppx"
  "mirage-block-ramdisk"
  "mirage-block-unix"
  "nocrypto"
  "wodan" {=version}
]

pin-depends: [
  ["mirage-block.dev" "git+https://github.com/pascutto/mirage-block"]
  ["mirage-block-combinators.dev" "git+https://github.com/pascutto/mirage-block"]
  ["mirage-block-unix.dev" "git+https://github.com/pascutto/mirage-block-unix"]
  ["mirage-block-ramdisk.dev" "git+https://github.com/pascutto/mirage-block-ramdisk"]
]
