opam-version: "2.0"
maintainer: "g2p.code@gmail.com"
authors: [ "Gabriel de Perthuis" ]
homepage: "https://github.com/mirage/wodan"
dev-repo: "git+https://github.com/mirage/wodan.git"
bug-reports: "https://github.com/mirage/wodan/issues"
name: "wodan-irmin"
synopsis: "Wodan as an Irmin store"

build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml"
  "dune"  {>= "2.3.0"}
  "alcotest" {with-test}
  "irmin-test" {with-test}
  "mirage-block-unix" {with-test}
  "checkseum" {>= "0.0.2"}
  "digestif"
  "io-page-unix"
  "irmin" {>= "2.7.2"}
  "irmin-chunk"
  "irmin-git"
  "irmin-unix"
  "lwt"
  "lwt_ppx"
  "mirage-block-ramdisk"
  "mirage-block-unix"
  "nocrypto"
  "wodan"
]

tags: "org:mirage"
pin-depends: [
  ["mirage-block.dev" "git+https://github.com/g2p/mirage-block#e0d74f1a37cc543cff4588270b548fa488ce7210"]
  ["mirage-block-combinators.dev" "git+https://github.com/g2p/mirage-block#e0d74f1a37cc543cff4588270b548fa488ce7210"]
  ["mirage-block-unix.dev" "git+https://github.com/g2p/mirage-block-unix#c993fef086b645175e45bd6c991b1dbaa95db714"]
  ["mirage-block-ramdisk.dev" "git+https://github.com/g2p/mirage-block-ramdisk#b86f03c200f74138d9a0eab5f7e0b0cbf8a48294"]
]
