opam-version: "2.0"
maintainer: "g2p.code@gmail.com"
authors: [ "Gabriel de Perthuis" ]
homepage: "https://github.com/mirage/wodan"
dev-repo: "git+https://github.com/mirage/wodan.git"
bug-reports: "https://github.com/mirage/wodan/issues"
name: "wodan"
synopsis: "A flash-friendly, safe and flexible filesystem library"

build: [
  ["dune" "build" "-p" name ]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@fmt" "-p" name ] {with-test}
]

depends: [
  "ocamlfind" {build}
  "dune"  {>= "1.7"}

  "ocamlformat" {with-test & = "0.11.0"}
  "alcotest" {with-test}
  "bos" {with-test}
  "ezjsonm" {with-test}
  "mirage-block-unix" {with-test}
  "ounit" {with-test}
  "ocaml-migrate-parsetree" {with-test}
  "ppx_sexp_conv" {with-test}
  "yaml" {with-test}

  "bitv"
  "checkseum" {>= "0.0.2"}
  "cstruct"
  "diet" {>= "0.4"}
  "io-page"
  "logs"
  "lru" {= "0.3.0"}
  "lwt" {>= "3.1.0"}
  "lwt_ppx"
  "mirage-block" {>= "2.0.0"}
  "nocrypto"
  "ppx_cstruct"
  "rresult"
  "stdcompat"
  "ocaml" {>= "4.06.0"}
]

pin-depends: [
  ["mirage-block.dev" "git+https://github.com/g2p/mirage-block#barrier-and-discard"]
  ["mirage-block-combinators.dev" "git+https://github.com/g2p/mirage-block#barrier-and-discard"]
  ["mirage-block-unix.dev" "git+https://github.com/g2p/mirage-block-unix#barrier-and-discard"]
  ["mirage-block-ramdisk.dev" "git+https://github.com/g2p/mirage-block-ramdisk#barrier-and-discard"]
]

tags: "org:mirage"
