
(library
  (name      test_wodan)
  (modules   test_wodan)
  (libraries irmin-test irmin-mem io-page-unix nocrypto.lwt mirage-block-ramdisk checkseum.c wodan))

(executable
  (name      test)
  (modules   test)
  (libraries test_wodan))

(alias
  (name runtest)
  (package wodan)
  (deps test.exe)
  (action (run %{dep:test.exe} -q --color=always)))
