(library
 (name wodan)
 (public_name wodan)
 (flags :standard -g)
 (ocamlopt_flags :standard -g -O3)
 (preprocess
  (pps lwt_ppx ppx_cstruct ppx_expect))
 (inline_tests
  (libraries io-page-unix))
 (libraries rresult stdcompat cstruct sexplib mirage-types mirage-logs lwt
   io-page lru logs nocrypto bitv mirage-types-lwt diet checkseum.c))

(copy_files ../crc32c/crc32c.ml*)
