(library
 (name wodan)
 (public_name wodan)
 (flags :standard -g)
 (ocamlopt_flags :standard -g -O3)
 (preprocess
  (pps lwt_ppx ppx_cstruct))
 (libraries rresult stdcompat cstruct bigarray-compat sexplib mirage-block
   mirage-block-lwt mirage-logs lwt io-page lru logs nocrypto bitv diet
   checkseum optint result))
