(library
 (name wodan)
 (public_name wodan)
 (flags :standard -g)
 (ocamlopt_flags :standard -g -O3)
 (preprocess
  (pps lwt_ppx ppx_cstruct))
 (libraries rresult cstruct mirage-types stdcompat lwt io-page lru logs
   nocrypto bitv mirage-types-lwt diet checkseum))

(copy_files ../crc32c/crc32c.ml*)
