(executable
 (name bench)
 (modules bench)
 (preprocess
  (pps ppx_repr ppx_deriving_yojson))
 (libraries wodan mirage-block mirage-block-unix io-page-unix metrics fmt lwt
   lwt.unix nocrypto.lwt metrics-unix yojson re cmdliner memtrace fmt.tty
   logs logs.fmt mtime mtime.clock.os))

(rule
 (alias runbench)
 (package wodan)
 (deps bench.exe)
 (action
  (run ./bench.exe)))
